@@ -12,6 +12,7 @@
  8. Add option to use browse modes as supplied by server.
  9. When listing albums (not under artist), use "Artist (Year)" as subtitle.
 10. Follow material style, and place text to the left of switches.
+11. Close full-screen dialogs (e.g. settings) via Escape key.
 
 0.0.7
 -----
